--- a/pom.xml
+++ b/pom.xml
@@ -13,18 +13,17 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  ~
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>academy.devonline</groupId>
-    <artifactId>TODO</artifactId>
+    <artifactId>tic-tac-toe</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>TODO</name>
-    <description>TODO</description>
+    <name>tic-tac-toe</name>
+    <description>The Tic-Tac-Tac simple game using console mode</description>
     <url>http://devonline.academy/java</url>
     <organization>
         <name>DevOnline Academy</name>
@@ -46,9 +45,9 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:git://github.com/devonline-academy/TODO.git</connection>
-        <developerConnection>scm:git:ssh://github.com:devonline-academy/TODO.git</developerConnection>
-        <url>http://github.com/devonline-academy/TODO/tree/master</url>
+        <connection>scm:git:git://github.com/igorsergeevich888/tic-tac-toe.git</connection>
+        <developerConnection>scm:git:ssh://github.com:igorsergeevich888/tic-tac-toe.git</developerConnection>
+        <url>http://github.com/igorsergeevich888/tic-tac-toe/tree/master</url>
     </scm>
 
     <properties>
