--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
+        <proguard.version>7.1.1</proguard.version>
+
         <!-- Maven core plugins -->
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
@@ -67,6 +69,9 @@
         <maven-project-info-reports-plugin.version>3.1.2</maven-project-info-reports-plugin.version>
 
         <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
+        <proguard-maven-plugin.version>2.5.1</proguard-maven-plugin.version>
+
+
     </properties>
 
     <build>
@@ -122,30 +127,108 @@
         </pluginManagement>
         <plugins>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>${maven-assembly-plugin.version}</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/assembly/distribution-windows.xml</descriptor>
-                        <descriptor>src/assembly/distribution-unix.xml</descriptor>
-
-                        <descriptor>src/assembly/distribution-windows-with-jre.xml</descriptor>
-                        <descriptor>src/assembly/distribution-macos-with-jre.xml</descriptor>
-                        <descriptor>src/assembly/distribution-linux-with-jre.xml</descriptor>
-                    </descriptors>
-                </configuration>
+                <groupId>com.github.wvengen</groupId>
+                <artifactId>proguard-maven-plugin</artifactId>
+                <version>${proguard-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>proguard</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <proguardVersion>${proguard.version}</proguardVersion>
+                    <obfuscate>true</obfuscate>
+                    <injar>${project.build.finalName}.jar</injar>
+                    <outjar>${project.build.finalName}-release.jar</outjar>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <proguardInclude>${basedir}/proguard-rules.conf</proguardInclude>
+                    <libs>
+                        <lib>${java.home}/jmods/java.base.jmod</lib>
+                    </libs>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.guardsquare</groupId>
+                        <artifactId>proguard-base</artifactId>
+                        <version>${proguard.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.guardsquare</groupId>
+                        <artifactId>proguard-core</artifactId>
+                        <version>${proguard.version}</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                </dependencies>
+
 
             </plugin>
         </plugins>
 
 
     </build>
+    <profiles>
+        <profile>
+            <id>without-jre</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${maven-assembly-plugin.version}</version>
+
+                        <executions>
+                            <execution>
+                                <id>
+                                    without-jre
+                                </id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <descriptors>
+                                        <descriptor>src/assembly/distribution-windows.xml</descriptor>
+                                        <descriptor>src/assembly/distribution-unix.xml</descriptor>
+                                    </descriptors>
+                                </configuration>
+                            </execution>
+                        </executions>
+
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>with-jre</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${maven-assembly-plugin.version}</version>
+
+                        <executions>
+                            <execution>
+                                <id>with-jre</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <descriptors>
+                                        <descriptor>src/assembly/distribution-windows-with-jre.xml</descriptor>
+                                        <descriptor>src/assembly/distribution-macos-with-jre.xml</descriptor>
+                                        <descriptor>src/assembly/distribution-linux-with-jre.xml</descriptor>
+                                    </descriptors>
+                                </configuration>
+                            </execution>
+                        </executions>
+
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
