Update proguard-rules.conf:exclude enum constants

--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -2,4 +2,10 @@
 public static void main(java.lang.String[]);
 }
 
+-keepclasseswithmembers class academy.devonline.tictactoe.model.PlayerType {
+    *;
+    }
+
+
+
 -repackageclasses 'a'
