Add UserInterface command line argument

--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -6,6 +6,11 @@ public static void main(java.lang.String[]);
     *;
     }
 
+    -keepclasseswithmembers class academy.devonline.tictactoe.model.UserInterface {
+        *;
+        }
+
+
 
 
 -repackageclasses 'a'
