--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -2,15 +2,8 @@
 public static void main(java.lang.String[]);
 }
 
--keepclasseswithmembers class academy.devonline.tictactoe.model.PlayerType {
+-keepclasseswithmembers class academy.devonline.tictactoe.model.config.* {
     *;
-    }
-
-    -keepclasseswithmembers class academy.devonline.tictactoe.model.UserInterface {
-        *;
-        }
-
-
-
+}
 
 -repackageclasses 'a'
